--- a/index.html
+++ b/index.html
@@ -2,10 +2,75 @@
 <html>
   <head>
     <title>Broadway</title>
+    <link href="resources/image/identify.svg" type="image/svg" rel="image">
+    <link href="resources/image/execute.svg" type="image/svg" rel="image">
+    <link href="resources/image/understand.svg" type="image/svg" rel="image">
+    <link href="resources/image/the-flatiron-building.png" type="image/png" rel="image">
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
-  <body>
-    <div>
-      
+  <body id=body>
+    <div class=center>
+      <div class=top>
+        <h1 id=top>Broadway Design</h1>
+        <div>
+          <nav class=navtop>
+            <a href="#body">Home</a><br><br>
+            <a href="#body">Process</a><br><br>
+            <a href="#body">Work</a><br><br>
+            <a href="#body">Team</a><br><br>
+            <a href="#body">Contact</a>
+          </nav>
+        </div>
+      </div>
+      <div class=process>
+        <h2>Our Process</h2>
+        <div>
+          <img src="resources/image/identify.svg"/>
+          <h3>Identify</h3>
+          <p>We focus on the most important details.</p>
+        </div>
+        <div>
+          <img src="resources/image/understand.svg"/>
+          <h3>Understand</h3>
+          <p>We study our projects inside and out.</p>
+        </div>
+        <div>
+          <img src="resources/image/execute.svg"/>
+          <h3>Execute</h3>
+          <p>We put everything we have into our work.</p>
+        </div>
+      </div>
+      <div class=bottom>
+        <h1 id=bottom>Designed in New York</h1>
+      </div>
+      <div>
+        <h3>Portfolio</h3>
+        <p>Coming Soon</p>
+      </div>
+      <div>
+        <h3>Team</h3>
+        <p>We're Hiring!</p>
+      </div>
+      <div>
+        <h3>Contact</h3>
+        <p>Phone: (555)-555-5555<br><br>
+        E-mail: test@example.com<br><br>
+        Twitter: @test</p>
+      </div>
+    </div>
+    <div id=end class=end>
+      <nav class=navbot>
+        <a>© Broadway 2017</a>
+        <a class=nav-a href="#body">Home</a>
+        <a class=nav-a href="#body">About</a>
+        <a class=nav-a href="#body">Work</a>
+        <a class=nav-a href="#body">Team</a>
+        <a class=nav-a href="#body">Contact</a>
+      </nav>
     </div>
   </body>
 </html>
+
+
+<div>
+</div>
